--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
             <version>20220320</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
+
+
         <!-- Telegram bot Java API -->
         <dependency>
             <groupId>org.telegram</groupId>
